fix: decrease the over spacing in sidebar

--- a/src/app/Shared/sidebarfolder/sidebarfolder.component.scss
+++ b/src/app/Shared/sidebarfolder/sidebarfolder.component.scss
@@ -1,7 +1,7 @@
 @import "../../colors";
 
 .folder {
-  padding: 10px 8px;
+  padding: 8px;
   padding-right: 4px;
   margin-bottom: 16px;
   width: 100%;
@@ -30,6 +30,6 @@
   }
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 8px;
+    margin-bottom: 0px;
   }
 }
